# pmp-library

./: CMakeLists.txt
src/pmp/: CMakeLists.txt  remeshApp.cpp
src/pmp/algorithms/: remeshing.cpp  remeshing.h
src/pmp/executables/: CMakeLists.txt  c_remesh.cpp
